--- a/Cart-project/index.html
+++ b/Cart-project/index.html
@@ -9,11 +9,11 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">home</a></li>
-            <li><a href="#male">men</a></li>
-            <li><a href="#female">women</a></li>
-            <li><a href="#kids">kids</a></li>
-            <li><a href="#electronic">electronics</a></li>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#male">MEN</a></li>
+            <li><a href="#female">WOMEN</a></li>
+            <li><a href="#kids">KIDS</a></li>
+            <li><a href="#electronic">ELECTRONICS</a></li>
         </ul>
     </nav>
     <section id="search">
