--- a/Cart-project/index.html
+++ b/Cart-project/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Shopping Cart</title>
-     <link rel="shortcut icon" href="./image/favicon.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="./image/favicon.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="./Cart.css">
 </head>
 <body>
     <nav>
-        <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#male">MEN</a></li>
-            <li><a href="#female">WOMEN</a></li>
-            <li><a href="#kids">KIDS</a></li>
-            <li><a href="#electronic">ELECTRONICS</a></li>
-        </ul>
+        <div id="lefticon">
+            <img src="./image/favicon.jpeg" alt="img">
+        </div>
+        <div id="center">
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#male">MEN</a></li>
+                <li><a href="#female">WOMEN</a></li>
+                <li><a href="#kids">KIDS</a></li>
+                <li><a href="#electronic">ELECTRONICS</a></li>
+            </ul>
+     </div>  
     </nav>
     <section id="search">
         <input type="Enter the Product">
